--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/webdrive_api/Excercise1.java=UTF-8
 encoding//src/webdrive_api/Excercise2.java=UTF-8
+encoding//src/webdrive_api/Excercise3.java=UTF-8
+encoding//src/webdrive_api/Excercise4.java=UTF-8
+encoding//src/webdrive_api/Excercise5.java=UTF-8
