--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,5 @@ encoding//src/webdrive_api/Excercise2.java=UTF-8
 encoding//src/webdrive_api/Excercise3.java=UTF-8
 encoding//src/webdrive_api/Excercise4.java=UTF-8
 encoding//src/webdrive_api/Excercise5.java=UTF-8
+encoding//src/webdrive_api/Excercise6.java=UTF-8
+encoding//src/webdrive_api/Excercise7.java=UTF-8
